--- a/src/main/resources/templates/change-password.html
+++ b/src/main/resources/templates/change-password.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Change password</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+  <link rel="stylesheet" href="" th:href="@{/style.css}"/>
 </head>
 <body>
 <div class="container">
@@ -29,19 +31,37 @@
   <form action="/change-password" method="post">
     <div class="form-group">
       <label for="currentPassword">Current Password</label>
-      <input type="password" id="currentPassword" name="currentPassword" class="form-control" required="required" />
+      <div class="password-field">
+        <input type="password" id="currentPassword" name="currentPassword" class="form-control" placeholder="Password" required="required" />
+      </div>
     </div>
     <div class="form-group">
       <label for="newPassword">New Password</label>
-      <input type="password" id="newPassword" name="newPassword" class="form-control" required="required" />
+      <div class="password-field">
+        <input type="password" id="newPassword" name="newPassword" class="form-control" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="Password" required />
+      </div>
+    </div>
+    <div id="message">
+      <i id="length" class="invalid">Your password must at least 8 characters, </i>
+      <i id="letter" class="invalid">a lowercase letter, </i>
+      <i id="capital" class="invalid">a uppercase letter, </i>
+      <i id="number" class="invalid">a number, </i>
+      <i id="special" class="invalid">a special letter.</i>
     </div>
     <div class="form-group">
       <label for="confirmPassword">Confirm Password</label>
-      <input type="password" id="confirmPassword" name="confirmPassword" class="form-control" required="required" />
+      <div class="password-field">
+        <input type="password" id="confirmPassword" name="confirmPassword" class="form-control" placeholder="Password" required="required" />
+      </div>
+    </div>
+    <div id="error">
+      <i id="errorConfirmPassword" class="invalid">Your new password and confirm password does not match</i>
     </div>
     <button type="submit" class="btn btn-primary">Change Password</button>
   </form>
-  <a href="/logout" class="link link-primary"> Logout </a><br>
+  <a href="/logout" class="link link-primary"> Logout </a>
+  <a href="/home" class="link link-primary"> Home </a>
+  <script src ="" th:src="@{main.js}"></script>
 </div>
 </body>
 </html>
