--- a/src/main/resources/templates/reset-password.html
+++ b/src/main/resources/templates/reset-password.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Reset password</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="" th:href="@{/style.css}"/>
 </head>
 <body>
 <div class="container">
@@ -15,21 +16,35 @@
     </div>
     <div class="form-group">
       <label for="newPassword">New Password</label>
-      <input type="password" id="newPassword" name="newPassword" class="form-control" required="required" />
+      <input type="password" id="newPassword" name="newPassword" pattern="(?=.*\d)(?=.*?[0-9])(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number, one uppercase letter, one lowercase letter, one special letter, at least 8 or more characters" class="form-control" required="required" />
     </div>
-
+    <div id="message">
+      <i id="length" class="invalid">Your password must at least 8 characters, </i>
+      <i id="letter" class="invalid">a lowercase letter, </i>
+      <i id="capital" class="invalid">a uppercase letter, </i>
+      <i id="number" class="invalid">a number, </i>
+      <i id="special" class="invalid">a special letter.</i>
+    </div>
     <div class="form-group">
       <label for="confirmPassword">Confirm Password</label>
       <input type="password" id="confirmPassword" name="confirmPassword" class="form-control" required="required" />
     </div>
+    <div id="error">
+      <i id="errorConfirmPassword" class="invalid">Your new password and confirm password does not match</i>
+    </div>
     <button type="submit" class="btn btn-primary">Reset password</button>
   </form>
-
+  <div th:if="${account_locked}" class="alert alert-warning">
+    Your account has been locked due to multiple failed attempts.
+  </div>
   <div th:if="${password_used}" class="alert alert-warning">
     Your password has been used before.
   </div>
   <div th:if="${otp_error}" class="alert alert-danger">
     Your OTP is incorrect
+  </div>
+  <div th:if="${otp_expiry}" class="alert alert-danger">
+    Your OTP was expired
   </div>
   <div th:if="${success}" class="alert alert-danger">
     Reset password successful
@@ -43,6 +58,7 @@
   <div th:if="${password_used}" class="alert alert-danger">
     Your new password has been used before
   </div>
+  <script src ="" th:src="@{main.js}"></script>
 </div>
 </body>
 </html>
