--- a/src/main/resources/templates/add-info.html
+++ b/src/main/resources/templates/add-info.html
@@ -11,14 +11,18 @@
     <h2 class="mt-5">Add information</h2>
     <form th:action="@{/add-info}" method="post">
         <div class="form-group">
-            <label for="email">Email</label>
-            <input type="text" id="email" name="email" class="form-control" required="required" />
+            <label for="firstName">First name</label>
+            <input type="text" id="firstName" name="firstName" class="form-control" required="required" />
         </div>
-
+        <div class="form-group">
+            <label for="lastName">Last name</label>
+            <input type="text" id="lastName" name="lastName" class="form-control" required="required" />
+        </div>
         <div class="form-group">
             <label for="phoneNumber">Phone number</label>
             <input type="text" id="phoneNumber" name="phoneNumber" class="form-control" required="required" />
         </div>
+
 
         <button type="submit" class="btn btn-primary">Save</button>
         <a href="/home" class="link link-primary"> Home </a><br>
