--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -8,34 +8,20 @@
 <body>
 <div class="container">
     <h2 class="mt-5">Register</h2>
-    <div th:if="${error}" class="alert alert-danger">
-        Failed register
-    </div>
     <div th:if="${error_username}" class="alert alert-danger">
-        Username is exists
+        Your username is existed.
     </div>
-    <div th:if="${not_strong_password}" class="alert alert-danger">
-        Your new password is not strong enough
-    </div>
-    <div th:if="${password_dif}" class="alert alert-danger">
-        Your new password and confirm password do not match
-    </div>
-    <div th:if="${success}" class="alert alert-danger">
-        You have registered successful
-    </div>
-
     <form action="/register" method="post">
         <div class="form-group">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" class="form-control" required="required">
         </div>
         <div class="form-group">
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" class="form-control" required="required">
+            <label for="email">Email:</label>
+            <input type="text" id="email" name="email" class="form-control" required="required">
         </div>
-        <div class="form-group">
-            <label for="confirmPassword">Confirm Password:</label>
-            <input type="password" id="confirmPassword" name="confirmPassword" class="form-control" required="required">
+        <div>
+            <label><input type="checkbox" required /> I accept the <a href="https://www.termsfeed.com/live/16378e3c-53b1-4f26-8f5a-c259f05948d6" target="_blank">Terms and Conditions</a>.</label>
         </div>
         <button type="submit" class="btn btn-primary">Register</button>
     </form>
