--- a/src/main/resources/templates/add-info.html
+++ b/src/main/resources/templates/add-info.html
@@ -2,30 +2,38 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Registration</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1 , user-scalable=yes">
+    <title>Information</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 
 <body>
 <div class="container">
-    <h2 class="mt-5">Add information</h2>
+    <h2 class="mt-5">Information</h2>
     <form th:action="@{/add-info}" method="post">
         <div class="form-group">
-            <label for="firstName">First name</label>
-            <input type="text" id="firstName" name="firstName" class="form-control" required="required" />
+            <label for="firstName" class="infoLabel">First name</label>
+            <input type="text" id="firstName" th:value="${userDetail.firstName}" name="firstName" class="form-control" required="required" />
         </div>
         <div class="form-group">
-            <label for="lastName">Last name</label>
-            <input type="text" id="lastName" name="lastName" class="form-control" required="required" />
+            <label for="lastName" class="infoLabel">Last name</label>
+            <input type="text" id="lastName" th:value="${userDetail.lastName}" name="lastName" class="form-control" required="required" />
         </div>
         <div class="form-group">
-            <label for="phoneNumber">Phone number</label>
-            <input type="text" id="phoneNumber" name="phoneNumber" class="form-control" required="required" />
+            <label for="phoneNumber" class="infoLabel">Phone number</label>
+            <input type="text" id="phoneNumber" th:value="${userDetail.phoneNumber}" name="phoneNumber" class="form-control" required="required" />
         </div>
-
-
+        <div class="form-group">
+            <label for="email" class="infoLabel">Email</label>
+            <input type="text" id="email" th:value="${userDetail.email}" name="email" class="form-control" required="required" />
+        </div>
         <button type="submit" class="btn btn-primary">Save</button>
-        <a href="/home" class="link link-primary"> Home </a><br>
+        <button type="button" style="margin-left: auto" class="btn btn-primary" onclick="backToPreviousPage()">Back</button>
+        <script>
+            function backToPreviousPage(){
+                history.back();
+            }
+        </script>
     </form>
 </div>
 </body>
