--- a/src/main/resources/templates/change-password.html
+++ b/src/main/resources/templates/change-password.html
@@ -1,67 +1,64 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>Change password</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
-  <link rel="stylesheet" href="" th:href="@{/style.css}"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1 , user-scalable=yes">
+    <title>Change password</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+    <link rel="stylesheet" href="" th:href="@{/style.css}"/>
 </head>
 <body>
 <div class="container">
-  <h2 class="mt-5">Change password</h2>
-  <div th:if="${success}" class="alert alert-danger">
-    Change password successful
-  </div>
-  <div th:if="${not_strong_password}" class="alert alert-danger">
-    Your new password is not strong enough
-  </div>
-  <div th:if="${password_dif}" class="alert alert-danger">
-    Your new password and confirm password do not match
-  </div>
-  <div th:if="${password_used}" class="alert alert-danger">
-    Your new password has used before
-  </div>
-  <div th:if="${currentPassword_wrong}" class="alert alert-danger">
-    Your current password is incorrect
-  </div>
-  <div th:if="${first_change_password}" class="alert alert-warning">
-    You have to change password in first login.
-  </div>
-  <form action="/change-password" method="post">
-    <div class="form-group">
-      <label for="currentPassword">Current Password</label>
-      <div class="password-field">
-        <input type="password" id="currentPassword" name="currentPassword" class="form-control" placeholder="Password" required="required" />
-      </div>
-    </div>
-    <div class="form-group">
-      <label for="newPassword">New Password</label>
-      <div class="password-field">
-        <input type="password" id="newPassword" name="newPassword" class="form-control" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="Password" required />
-      </div>
-    </div>
-    <div id="message">
-      <i id="length" class="invalid">Your password must at least 8 characters, </i>
-      <i id="letter" class="invalid">a lowercase letter, </i>
-      <i id="capital" class="invalid">a uppercase letter, </i>
-      <i id="number" class="invalid">a number, </i>
-      <i id="special" class="invalid">a special letter.</i>
-    </div>
-    <div class="form-group">
-      <label for="confirmPassword">Confirm Password</label>
-      <div class="password-field">
-        <input type="password" id="confirmPassword" name="confirmPassword" class="form-control" placeholder="Password" required="required" />
-      </div>
-    </div>
-    <div id="error">
-      <i id="errorConfirmPassword" class="invalid">Your new password and confirm password does not match</i>
-    </div>
-    <button type="submit" class="btn btn-primary">Change Password</button>
-  </form>
-  <a href="/logout" class="link link-primary"> Logout </a>
-  <a href="/home" class="link link-primary"> Home </a>
-  <script src ="" th:src="@{main.js}"></script>
+    <h2 class="mt-5">Change password</h2>
+    <p th:if="${success}" class="alert alert-danger" th:text="${success}"></p>
+    <p th:if="${not_strong_password}" class="alert alert-danger" th:text="${not_strong_password}"></p>
+    <p th:if="${password_dif}" class="alert alert-danger" th:text="${password_dif}"></p>
+    <p th:if="${password_used}" class="alert alert-danger" th:text="${password_used}"></p>
+    <p th:if="${currentPassword_wrong}" class="alert alert-danger" th:text="${currentPassword_wrong}"></p>
+    <p th:if="${first_change_password}" class="alert alert-warning" th:text="${first_change_password}"></p>
+    <form action="/change-password" method="post">
+        <div th:object="${userDetail}"></div>
+        <div class="form-group">
+            <label for="currentPassword">Current Password</label>
+            <input type="password" id="currentPassword" name="currentPassword" class="form-control" placeholder="Current Password" required="required" />
+        </div>
+        <div class="form-group">
+            <label for="newPassword">New Password</label>
+            <input type="password" id="newPassword" name="newPassword" class="form-control" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="New Password" required />
+        </div>
+        <div id="message">
+            <i id="length" class="invalid">Your password must at least 8 characters, </i>
+            <i id="letter" class="invalid">a lowercase letter, </i>
+            <i id="capital" class="invalid">an uppercase letter, </i>
+            <i id="number" class="invalid">a number, </i>
+            <i id="special" class="invalid">a special letter.</i>
+        </div>
+        <div class="form-group">
+            <label for="confirmPassword">Confirm Password</label>
+            <input type="password" id="confirmPassword" name="confirmPassword" class="form-control" placeholder="Confirm Password" required="required" />
+        </div>
+        <script>
+            if ('[[${userDetail.role}]]' === 'admin'){
+                document.getElementById('newPassword').removeAttribute('pattern');
+                document.getElementById('currentPassword').removeAttribute('required');
+                document.getElementById('confirmPassword').removeAttribute('required');
+            }
+        </script>
+        <div id="error">
+            <i id="errorConfirmPassword" class="invalid">Your new password and confirm password does not match</i>
+        </div>
+        <button type="submit" class="btn btn-primary">Change Password</button>
+        <button type="button" style="margin-left: auto" class="btn btn-primary" onclick="backToPreviousPage()">Back</button>
+        <script>
+            function backToPreviousPage(){
+                history.back();
+            }
+        </script>
+    </form>
+    <a href="/home" class="link link-primary"> Home </a>
+    <a href="/logout" class="link link-primary"> Logout </a>
+    <script src ="" th:src="@{main.js}"></script>
 </div>
 </body>
 </html>
