--- a/src/main/resources/templates/forget-password.html
+++ b/src/main/resources/templates/forget-password.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>Forget password</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1 , user-scalable=yes">
+    <title>Forget password</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body>
 
 <div class="container">
-  <h2 class="mt-5">Forgot password</h2>
-  <form action="/forget-password" method="post">
-    <div class="form-group">
-      <label for="username">Username</label>
-      <input type="text" id="username" name="username" class="form-control" required="required" />
-    </div>
-    <button type="submit" class="btn btn-primary">Send OTP</button>
-  </form>
-
-  <div th:if="${wrong_username}" class="alert alert-danger">
-    Your username is not exists
-  </div>
-  <div th:if="${username_locked}" class="alert alert-danger">
-    Your account has been locked. Please contact support
-  </div>
+    <h2 class="mt-5">Forgot password</h2>
+    <form action="/forget-password" method="post">
+        <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" id="username" name="username" class="form-control" required="required" />
+        </div>
+        <button type="submit" class="btn btn-primary">Send OTP</button>
+        <button type="button" class="btn btn-primary" onclick="backToPreviousPage()">Back</button>
+        <script>
+            function backToPreviousPage(){
+                history.back();
+            }
+        </script>
+    </form>
+    <p th:if="${wrong_username}" class="alert alert-danger" th:text="${wrong_username}"></p>
+    <p th:if="${username_locked}" class="alert alert-danger" th:text="${username_locked}"></p>
 </div>
 </body>
 </html>
