--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,19 +1,19 @@
-<!-- home.html -->
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>Home Page</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <link rel="stylesheet" th:href="@{/style.css}" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1 , user-scalable=yes">
+    <title>Home Page</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" th:href="@{/style.css}" />
 </head>
 <body>
-<h2 class="mt-5">Welcome to home page!</h2>
-<div th:if="${login_success}" class="alert alert-success">
-  You have been logged in
+<div class="container">
+    <h2 class="mt-5">Welcome to home page!</h2>
+    <p th:if="${login_success}" class="alert alert-success" th:text="${login_success}"></p>
+    <a href="/change-password" class="link link-primary">Change Password</a>
+    <a href="/logout" class="link link-primary"> Logout </a>
+    <a href="/add-info" class="link link-primary"> Information </a>
 </div>
-<a href="/change-password" class="link link-primary">Change Password</a>
-<a href="/logout" class="link link-primary"> Logout </a>
-<a href="/add-info" class="link link-primary"> Add information </a>
 </body>
 </html>
