--- a/src/main/resources/templates/reset-password.html
+++ b/src/main/resources/templates/reset-password.html
@@ -1,64 +1,54 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>Reset password</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="" th:href="@{/style.css}"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1 , user-scalable=yes">
+    <title>Reset Password</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="" th:href="@{/style.css}"/>
 </head>
 <body>
 <div class="container">
-  <h2 class="mt-5">Reset password</h2>
-  <form action="/reset-password" method="post">
-    <div class="form-group">
-      <label for="otp">OTP</label>
-      <input type="password" id="otp" name="otp" class="form-control" required="required" />
-    </div>
-    <div class="form-group">
-      <label for="newPassword">New Password</label>
-      <input type="password" id="newPassword" name="newPassword" pattern="(?=.*\d)(?=.*?[0-9])(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number, one uppercase letter, one lowercase letter, one special letter, at least 8 or more characters" class="form-control" required="required" />
-    </div>
-    <div id="message">
-      <i id="length" class="invalid">Your password must at least 8 characters, </i>
-      <i id="letter" class="invalid">a lowercase letter, </i>
-      <i id="capital" class="invalid">a uppercase letter, </i>
-      <i id="number" class="invalid">a number, </i>
-      <i id="special" class="invalid">a special letter.</i>
-    </div>
-    <div class="form-group">
-      <label for="confirmPassword">Confirm Password</label>
-      <input type="password" id="confirmPassword" name="confirmPassword" class="form-control" required="required" />
-    </div>
-    <div id="error">
-      <i id="errorConfirmPassword" class="invalid">Your new password and confirm password does not match</i>
-    </div>
-    <button type="submit" class="btn btn-primary">Reset password</button>
-  </form>
-  <div th:if="${account_locked}" class="alert alert-warning">
-    Your account has been locked due to multiple failed attempts.
-  </div>
-  <div th:if="${password_used}" class="alert alert-warning">
-    Your password has been used before.
-  </div>
-  <div th:if="${otp_error}" class="alert alert-danger">
-    Your OTP is incorrect
-  </div>
-  <div th:if="${otp_expiry}" class="alert alert-danger">
-    Your OTP was expired
-  </div>
-  <div th:if="${success}" class="alert alert-danger">
-    Reset password successful
-  </div>
-  <div th:if="${not_strong_password}" class="alert alert-danger">
-    Your new password is not strong enough
-  </div>
-  <div th:if="${password_dif}" class="alert alert-danger">
-    Your new password and confirm password do not match
-  </div>
-  <div th:if="${password_used}" class="alert alert-danger">
-    Your new password has been used before
-  </div>
-  <script src ="" th:src="@{main.js}"></script>
+    <h2 class="mt-5">Reset password</h2>
+    <form action="/reset-password" method="post">
+        <div class="form-group">
+            <label for="otp">OTP</label>
+            <input type="password" id="otp" name="otp" class="form-control" required="required" />
+        </div>
+        <div class="form-group">
+            <label for="newPassword">New Password</label>
+            <input type="password" id="newPassword" name="newPassword" pattern="(?=.*\d)(?=.*?[0-9])(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number, one uppercase letter, one lowercase letter, one special letter, at least 8 or more characters" class="form-control" required="required" />
+        </div>
+        <div id="message">
+            <i id="length" class="invalid">Your password must at least 8 characters, </i>
+            <i id="letter" class="invalid">a lowercase letter, </i>
+            <i id="capital" class="invalid">an uppercase letter, </i>
+            <i id="number" class="invalid">a number, </i>
+            <i id="special" class="invalid">a special letter.</i>
+        </div>
+        <div class="form-group">
+            <label for="confirmPassword">Confirm Password</label>
+            <input type="password" id="confirmPassword" name="confirmPassword" class="form-control" required="required" />
+        </div>
+        <div id="error">
+            <i id="errorConfirmPassword" class="invalid">Your new password and confirm password does not match</i>
+        </div>
+        <button type="submit" class="btn btn-primary">Reset password</button>
+        <button type="button" style="margin-left: auto" class="btn btn-primary" onclick="backToPreviousPage()">Back</button>
+        <script>
+            function backToPreviousPage(){
+                history.back();
+            }
+        </script>
+    </form>
+    <p th:if="${account_locked}" class="alert alert-warning" th:text="${account_locked}"></p>
+    <p th:if="${otp_error}" class="alert alert-danger" th:text="${otp_error}"></p>
+    <p th:if="${otp_expiry}" class="alert alert-danger" th:text="${otp_expiry}"></p>
+    <p th:if="${success}" class="alert alert-danger" th:text="${success}"></p>
+    <p th:if="${not_strong_password}" class="alert alert-danger" th:text="${not_strong_password}"></p>
+    <p th:if="${password_dif}" class="alert alert-danger" th:text="${password_dif}"></p>
+    <p th:if="${password_used}" class="alert alert-danger" th:text="${password_used}"></p>
+    <script src ="" th:src="@{main.js}"></script>
 </div>
 </body>
 </html>
