--- a/src/main/resources/templates/unlock-account.html
+++ b/src/main/resources/templates/unlock-account.html
@@ -1,28 +1,29 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-  <meta charset="UTF-8">
-  <title>Unlock account</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-</head>
-<body>
-
-<div class="container">
-  <h2 class="mt-5">Unlock account</h2>
-  <form action="/unlock-account" method="post">
-    <div class="form-group">
-      <label for="otp">OTP</label>
-      <input type="password" id="otp" name="otp" class="form-control" required="required" />
-    </div>
-    <button type="submit" class="btn btn-primary">Unlock</button>
-  </form>
-
-  <div th:if="${otp_sent}" class="alert alert-success">
-    Your OTP has been sent to your device
+  <!DOCTYPE html>
+  <html xmlns:th="http://www.thymeleaf.org">
+  <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1 , user-scalable=yes">
+      <title>Unlock account</title>
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  </head>
+  <body>
+  <div class="container">
+      <h2 class="mt-5">Unlock account</h2>
+      <form action="/unlock-account" method="post">
+          <div class="form-group">
+              <label for="otp">OTP</label>
+              <input type="password" id="otp" name="otp" class="form-control" required="required" />
+          </div>
+          <button type="submit" class="btn btn-primary">Unlock</button>
+          <button type="button" style="margin-left: auto" class="btn btn-primary" onclick="backToPreviousPage()">Back</button>
+          <script>
+              function backToPreviousPage(){
+                  history.back();
+              }
+          </script>
+      </form>
+      <p th:if="${otp_sent}" class="alert alert-success" th:text="${otp_sent}"></p>
+      <p th:if="${wrong_otp}" class="alert alert-danger"></p>
   </div>
-  <div th:if="${wrong_otp}" class="alert alert-danger">
-    Your OTP is incorrect or expired
-  </div>
-</div>
-</body>
-</html>
+  </body>
+  </html>
